// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Component Snapshots Actions disables accept button when disableAccept is true 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="true"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          disabled=""
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Actions does not render buttons when no text provided 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Actions renders accept button and handles clicks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Actions renders both accept and decline buttons when configured 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept Call
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline Call
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Actions renders decline button and handles clicks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Actions verifies button properties and behavior 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button State Variations renders task with disabled accept button 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Disabled Accept Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="true"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          disabled=""
          type="button"
        >
          <span>
            Disabled Accept
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button State Variations renders task with no buttons 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          No Buttons Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button State Variations renders task with only accept button 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Accept Only Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept Only
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button State Variations renders task with only decline button 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Decline Only Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline Only
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Complex Scenarios renders complex task with all features 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected complex-task-style md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="complex-task-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="chat"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-complex-task-123"
        >
          Complex Task with All Features
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Complex Task with All Features
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="complex-task-123-state"
        >
          Connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="complex-task-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept Chat
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline Chat
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Complex Scenarios renders digital media task with tooltip 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="email"
        icon-name="email-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper incoming-digital-task-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Digital Media Task with Tooltip
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Digital Media Task with Tooltip
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-queue"
        >
          Support
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept Email
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline Email
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Complex Scenarios renders incoming task with countdown 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="incoming-vip-call"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Call with Countdown
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="incoming-vip-call-queue"
        >
          Support
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="incoming-vip-call-time-left"
        >
          Time Left: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept VIP Call
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Component Integration integrates properly with all momentum components 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Complete Integration Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Component Integration maintains consistent behavior with digital media props 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="chat"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper incoming-digital-task-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Test Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Test Task
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-queue"
        >
          Support
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Component Integration maintains consistent behavior with incoming call props 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-time-left"
        >
          Time Left: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Component Integration maintains consistent behavior with voice call props 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge Cases handles all media channel combinations: media-combination-email 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="email"
        icon-name="email-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Media Test
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Media Test
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge Cases handles all media channel combinations: media-combination-facebook 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <div
        class="brand-visual-background"
      >
        <mdc-brandvisual
          class="facebook"
        />
      </div>
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Media Test
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Media Test
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge Cases handles all media channel combinations: media-combination-sms 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Media Test
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge Cases handles all media channel combinations: media-combination-whatsapp 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <div
        class="brand-visual-background"
      >
        <mdc-brandvisual
          class="whatsapp"
        />
      </div>
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Media Test
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Media Test
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge Cases handles empty string values 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge Cases handles undefined interactionId gracefully 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="undefined-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="undefined-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge Cases handles zero values correctly 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering does not render tooltip for voice media types 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Voice Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders Avatar for non-brand visual digital media types: digital-media-chat 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="chat"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Digital Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Digital Task
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders Avatar for non-brand visual digital media types: digital-media-email 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="email"
        icon-name="email-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Digital Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Digital Task
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders Avatar for non-brand visual digital media types: digital-media-sms 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Digital Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders Avatar for non-brand visual digital media types: digital-media-social 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="social"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Digital Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Digital Task
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders Avatar for voice media types 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders Brandvisual for specific social channels: brandvisual-facebook 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <div
        class="brand-visual-background"
      >
        <mdc-brandvisual
          class="facebook"
        />
      </div>
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Social Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Social Task
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders Brandvisual for specific social channels: brandvisual-whatsapp 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <div
        class="brand-visual-background"
      >
        <mdc-brandvisual
          class="whatsapp"
        />
      </div>
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Social Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Social Task
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media Type Rendering renders tooltip for digital media types 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="chat"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-test-interaction-123"
        >
          Digital Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Digital Task
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Props Validation handles boolean props correctly: boolean-props-selected-incoming-disabled 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Boolean Test selected-incoming-disabled
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="true"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          disabled=""
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Props Validation handles boolean props correctly: boolean-props-unselected-outgoing-enabled 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Boolean Test unselected-outgoing-enabled
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Props Validation handles function props correctly 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Custom Accept
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Custom Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Rendering does not render title when not provided 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Rendering renders queue information for incoming tasks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-queue"
        >
          Support
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Rendering renders task state for non-incoming tasks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Rendering renders the component correctly with default props 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Rendering renders with minimal props 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      />
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Rendering renders with selected state and custom styles 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected custom-style md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and Queue Variations displays different queue types: task-queue-sales 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Queue Task sales
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-queue"
        >
          Sales
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and Queue Variations displays different queue types: task-queue-support 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Queue Task support
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-queue"
        >
          Support
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and Queue Variations displays different queue types: task-queue-technical 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Queue Task technical
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-queue"
        >
          Technical
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and Queue Variations displays different task states: task-state-active 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and Queue Variations displays different task states: task-state-connected 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and Queue Variations displays different task states: task-state-hold 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task hold
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Hold
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and Queue Variations displays different task states: task-state-new 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task new
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          New
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots TaskTimer Integration does not render timer when no startTimeStamp and no RONA timeout 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots TaskTimer Integration renders handle time for incoming tasks without RONA timeout but with startTimeStamp 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots TaskTimer Integration renders handle time timer for non-incoming tasks with startTimeStamp 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-state"
        >
          Connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-handle-time"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots TaskTimer Integration renders time left timer for incoming tasks with RONA timeout 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
          data-testid="test-interaction-123-time-left"
        >
          Time Left: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;
